--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,6 @@
   <link rel="stylesheet" href="{{ "/css/lightbox.css" | prepend: full_base_url }}">
   <link rel="stylesheet" href="{{ "/assets/fontello/css/fontello.css" | prepend: full_base_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: full_base_url }}">
+  <link href="https://fonts.googleapis.com/css?family=Unica+One|Vollkorn" rel="stylesheet">
 
 </head>
