--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: 'Vollkorn', serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -55,6 +55,11 @@ table, table td, table th {
 
 .jslghtbx-thmb {
   margin: 0.2em !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color:    $maroon-color-light;
+  font-family: 'Unica One', cursive;
 }
 
 @media screen {
