--- a/css/main.css
+++ b/css/main.css
@@ -532,3 +532,9 @@ a.view-my-resume {
 
 .site-header {
   border-top: none !important; }
+
+.post-content h1 {
+  font-size: 42px; }
+  @media screen and (max-width: 1024px) {
+    .post-content h1 {
+      font-size: 36px; } }
