--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
-            <a href="https://github.com/{{ include.username }}"><span class="icon-github-circled" style="color: #828282;"></span><span class="username">{{ site.github_username }}</span></a>
+            <a href="https://github.com/{{ site.github_username }}"><span class="icon-github-circled" style="color: #828282;"></span><span class="username">{{ site.github_username }}</span></a>
           </li>
           {% endif %}
         </ul>
