--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -24,7 +24,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: transparent; }
+  background-color: rgba(0, 0, 0, 0); }
   .jslghtbx.jslghtbx-active {
     visibility: visible;
     background-color: rgba(0, 0, 0, 0.85); }
